--- a/src/change.html
+++ b/src/change.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -37,7 +37,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -51,15 +51,15 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../../img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<div class="balance__amount money">
+											1,150,000,000,000
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -85,7 +85,7 @@
 			<div class="change">
 				<div class="change__body">
 					<div class="change__exit">
-						<img src="../../img/exit-icon.svg" alt="exit">
+						<img src="img/exit-icon.svg" alt="exit">
 					</div>
 					<div class="change__core">
 						<div class="change__title">
@@ -93,7 +93,7 @@
 						</div>
 						<div class="change__content">
 							<div class="change__content-title">
-								Selling will end
+								Auction will end:
 							</div>
 							<div class="change__info change-info">
 								<div class="change-info__item">
@@ -113,7 +113,7 @@
 								</div>
 								<div class="change-info__item">
 									<div class="change-info__item-delete delete-file-button">
-										<img class="delete-file-button__img" src="../../img/delete-icon.svg" alt="delete">
+										<img class="delete-file-button__img" src="img/delete-icon.svg" alt="delete">
 										<span class="delete-file-button__text">
 											delete file
 										</span>
@@ -133,7 +133,7 @@
 		</main>
 
 	</div>
-	<script src="../../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
