--- a/src/follower.html
+++ b/src/follower.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -37,7 +37,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -51,15 +51,15 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../../img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<div class="balance__amount money">
+										1,150,000,000,000
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -85,7 +85,7 @@
 			<div class="change">
 				<div class="change__body">
 					<div class="change__exit">
-						<img src="../../img/exit-icon.svg" alt="exit">
+						<img src="img/exit-icon.svg" alt="exit">
 					</div>
 					<div class="change__core">
 						<div class="follow__title">
@@ -100,10 +100,10 @@
 							<div class="follow__row">
 								<div class="follow__item person">
 									<div class="person__image">
-										<img src="../../img/avatar.png" alt="avatar">
+										<img src="img/avatar.png" alt="avatar">
 									</div>
 									<div class="person__info">
-										<a href="../myprofile.html" class="person__info-title">
+										<a href="myprofile.html" class="person__info-title">
 											User Name
 										</a>
 										<div class="person__info-nickname username">
@@ -118,10 +118,10 @@
 							<div class="follow__row">
 								<div class="follow__item person">
 									<div class="person__image">
-										<img src="../../img/avatar.png" alt="avatar">
+										<img src="img/avatar.png" alt="avatar">
 									</div>
 									<div class="person__info">
-										<a href="../myprofile.html" class="person__info-title">
+										<a href="myprofile.html" class="person__info-title">
 											User Name
 										</a>
 										<div class="person__info-nickname username">
@@ -136,10 +136,10 @@
 							<div class="follow__row">
 								<div class="follow__item person">
 									<div class="person__image">
-										<img src="../../img/avatar.png" alt="avatar">
+										<img src="img/avatar.png" alt="avatar">
 									</div>
 									<div class="person__info">
-										<a href="../myprofile.html" class="person__info-title">
+										<a href="myprofile.html" class="person__info-title">
 											User Name
 										</a>
 										<div class="person__info-nickname username">
@@ -154,10 +154,10 @@
 							<div class="follow__row">
 								<div class="follow__item person">
 									<div class="person__image">
-										<img src="../../img/avatar.png" alt="avatar">
+										<img src="img/avatar.png" alt="avatar">
 									</div>
 									<div class="person__info">
-										<a href="../myprofile.html" class="person__info-title">
+										<a href="myprofile.html" class="person__info-title">
 											User Name
 										</a>
 										<div class="person__info-nickname username">
@@ -172,10 +172,10 @@
 							<div class="follow__row">
 								<div class="follow__item person">
 									<div class="person__image">
-										<img src="../../img/avatar.png" alt="avatar">
+										<img src="img/avatar.png" alt="avatar">
 									</div>
 									<div class="person__info">
-										<a href="../myprofile.html" class="person__info-title">
+										<a href="myprofile.html" class="person__info-title">
 											User Name
 										</a>
 										<div class="person__info-nickname username">
@@ -195,7 +195,7 @@
 		</main>
 
 	</div>
-	<script src="../../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
