--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="scss/index.scss">
+	<link rel="stylesheet" href="./scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -19,28 +19,28 @@
 		</div> -->
 	<div class="wrapper">
 		<h3 class="demo">Pages:</h3>
-		<a class="demo" href="page/main-page.html">Main page</a>
-		<a class="demo" href="page/item.html">Artwork page</a>
-		<a class="demo" href="page/creator.html">Creator profile</a>
-		<a class="demo" href="page/myprofile.html">My profile</a>
-		<a class="demo" href="page/search.html">Search</a>
+		<a class="demo" href="main-page.html">Main page</a>
+		<a class="demo" href="item.html">Artwork page</a>
+		<a class="demo" href="creator.html">Creator profile</a>
+		<a class="demo" href="myprofile.html">My profile</a>
+		<a class="demo" href="search.html">Search</a>
 		<h3 class="demo">Popups:</h3>
-		<a href="page/popup/change.html" class="demo">Change ending time</a>
-		<a href="page/popup/popup_create_artwork_one.html" class="demo">Creating artwork(step 1)</a>
-		<a href="page/popup/popup_create_artwork_two.html" class="demo">Creating artwork(step 2)</a>
-		<a href="page/popup/popup_create_artwork_three.html" class="demo">Creating artwork(step 3)</a>
-		<a href="page/popup/place-a-bid.html" class="demo">Place a bid</a>
-		<a href="page/popup/swap-to-taste.html" class="demo">Swap to TASTE</a>
-		<a href="page/popup/deposit-to-bnd.html" class="demo">Deposit to TASTE</a>
-		<a href="page/popup/withdraw.html" class="demo">Withdraw</a>
-		<a href="page/popup/swap-to-bnb.html" class="demo">Swap to BNB</a>
-		<a href="page/popup/balnce-settings.html" class="demo">Balance settings</a>
-		<a href="page/popup/connect-wallet.html" class="demo">Connecting wallet</a>
-		<a href="page/popup/connect-wallet-init.html" class="demo">Connecting wallet initializing</a>
-		<a href="page/popup/follower.html" class="demo">Follower</a>
-		<a href="page/popup/edit-your-profile.html" class="demo">Edit your profile</a>
+		<a href="change.html" class="demo">Change ending time</a>
+		<a href="popup_create_artwork_one.html" class="demo">Creating artwork(step 1)</a>
+		<a href="popup_create_artwork_two.html" class="demo">Creating artwork(step 2)</a>
+		<a href="popup_create_artwork_three.html" class="demo">Creating artwork(step 3)</a>
+		<a href="place-a-bid.html" class="demo">Place a bid</a>
+		<a href="swap-to-taste.html" class="demo">Swap to TASTE</a>
+		<a href="deposit-to-bnd.html" class="demo">Deposit to TASTE</a>
+		<a href="withdraw.html" class="demo">Withdraw</a>
+		<a href="swap-to-bnb.html" class="demo">Swap to BNB</a>
+		<a href="balnce-settings.html" class="demo">Balance settings</a>
+		<a href="connect-wallet.html" class="demo">Connecting wallet</a>
+		<a href="connect-wallet-init.html" class="demo">Connecting wallet initializing</a>
+		<a href="follower.html" class="demo">Follower</a>
+		<a href="edit-your-profile.html" class="demo">Edit your profile</a>
 	</div>
-	<script src="js/index.js"></script>
+	<script src="./js/index.js"></script>
 </body>
 
 </html>
