--- a/src/item.html
+++ b/src/item.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -39,16 +39,16 @@
 
 			<section class="mainframe">
 				<div class="mainframe__body">
-					<img src="../img/item-main-img.jpg" alt="item">
+					<img src="img/item-main-img.jpg" alt="item">
 					<div class="mainframe__bid bid">
 						<div class="bid__item">
 							<div class="bid__item-title">
 								Current Bid:
 							</div>
 							<div class="bid__item-content">
-								<img src="../img/kiss.svg" alt="like">
-								<p>
-									1,5M
+								<img src="img/kiss.svg" alt="like">
+								<p class="money">
+									1,150,000,000,000
 								</p>
 								<span>
 									(1308.54$)
@@ -57,10 +57,9 @@
 						</div>
 						<div class="bid__item">
 							<div class="bid__item-title">
-								Auction ending in:
+								Auction ends:
 							</div>
 							<div class="bid__item-content">
-								<img src="../img/kiss.svg" alt="like">
 								<p>
 									1h 28m 32s
 								</p>
@@ -82,7 +81,7 @@
 				<div class="user-info">
 					<div class="user-info__header">
 						<div class="user-info__ava">
-							<img src="../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="user-info__personal">
 							<div class="user-info__personal-name">
@@ -112,13 +111,13 @@
 					<div class="user-info__footer">
 						<div class="user-info__action">
 							<div class="user-info__action-item">
-								<img src="../img/external-link.svg" alt="link">
+								<img src="img/external-link.svg" alt="link">
 							</div>
 							<div class="user-info__action-item">
-								<img src="../img/share.svg" alt="share">
+								<img src="img/share.svg" alt="share">
 							</div>
 							<div class="user-info__action-item">
-								<img src="../img/threepoint.svg" alt="menu">
+								<img src="img/threepoint.svg" alt="menu">
 							</div>
 						</div>
 					</div>
@@ -133,7 +132,7 @@
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -145,22 +144,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -172,22 +171,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -199,22 +198,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -226,22 +225,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -253,22 +252,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -280,22 +279,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -307,22 +306,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -334,22 +333,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -361,22 +360,22 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
 							<div class="activity__row">
 								<div class="activity__place">
 									<div class="activity__place-image">
-										<img src="../img/activity-user-img.png" alt="user">
+										<img src="img/activity-user-img.png" alt="user">
 									</div>
 									<div class="activity__place-info">
 										<h5>
@@ -388,15 +387,15 @@
 									</div>
 								</div>
 								<div class="activity__sold">
-									<img src="../img/kiss.svg" alt="like">
-									<p>
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<p class="money">
+										1,150,000,000,000
 									</p>
 									<span>
 										(1308.54$)
 									</span>
 									<div class="button">
-										<img src="../img/activity-link.svg" alt="link">
+										<img src="img/activity-link.svg" alt="link">
 									</div>
 								</div>
 							</div>
@@ -406,15 +405,17 @@
 			</section>
 
 			<section class="lot">
-				<div class="lot__title">
-					Feature works
+				<div class="lot__titles">
+					<div class="lot__title">
+						Feature works
+					</div>
 				</div>
 				<div class="lot__body">
 					<div class="lot__body-item lot-item">
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -427,7 +428,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-1.jpg" alt="lot">
+									<img src="img/lot-img-1.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -438,7 +439,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -456,7 +457,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -469,7 +470,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-2.jpg" alt="lot">
+									<img src="img/lot-img-2.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -480,7 +481,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -498,7 +499,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -511,7 +512,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-3.jpg" alt="lot">
+									<img src="img/lot-img-3.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -522,7 +523,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -540,7 +541,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -553,7 +554,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-4.jpg" alt="lot">
+									<img src="img/lot-img-4.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -564,7 +565,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -582,7 +583,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -595,7 +596,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-5.jpg" alt="lot">
+									<img src="img/lot-img-5.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -606,7 +607,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -624,7 +625,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -637,7 +638,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-6.jpg" alt="lot">
+									<img src="img/lot-img-6.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -648,7 +649,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -666,7 +667,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -679,7 +680,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-7.jpg" alt="lot">
+									<img src="img/lot-img-7.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -690,7 +691,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -708,7 +709,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -721,7 +722,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-8.jpg" alt="lot">
+									<img src="img/lot-img-8.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -732,7 +733,7 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
 									<span>1,5M</span>
 								</div>
 							</div>
@@ -753,7 +754,7 @@
 		</main>
 
 	</div>
-	<script src="../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
