--- a/src/search.html
+++ b/src/search.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,15 +21,15 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
 					<span class="header__connect-body button-body">
-						<a href="popup/popup_create_artwork_one.html">
+						<a href="popup_create_artwork_one.html">
 							+ Add artwork
 						</a>
 					</span>
@@ -37,7 +37,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -51,15 +51,15 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<div class="balance__amount money">
+										1,150,000,000,000
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -83,16 +83,31 @@
 			<section class="lot">
 				<div class="lot__header">
 					<div class="lot__header-item">
-						<span>
-							Recently added
-						</span>
-						<img src="../img/dropdown.svg" alt="">
+						<div class="lot__header-title">
+							<span>
+								Recently added
+							</span>
+							<img src="img/dropdown.svg" alt="">
+						</div>
+						<ul class="lot__header-list lot__header-list_active">
+							<li>
+								Recently added
+							</li>
+							<li>
+								Recently added
+							</li>
+							<li>
+								Recently added
+							</li>
+						</ul>
 					</div>
 					<div class="lot__header-item">
-						<span>
-							Auctions
-						</span>
-						<img src="../img/dropdown.svg" alt="">
+						<div class="lot__header-title">
+							<span>
+								Auctions
+							</span>
+							<img src="img/dropdown.svg" alt="">
+						</div>
 					</div>
 				</div>
 				<div class="lot__body">
@@ -100,7 +115,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -113,7 +128,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-1.jpg" alt="lot">
+									<img src="img/lot-img-1.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -124,8 +139,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -142,7 +157,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -155,7 +170,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-2.jpg" alt="lot">
+									<img src="img/lot-img-2.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -166,8 +181,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -184,7 +199,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -197,7 +212,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-3.jpg" alt="lot">
+									<img src="img/lot-img-3.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -208,8 +223,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -226,7 +241,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -239,7 +254,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-4.jpg" alt="lot">
+									<img src="img/lot-img-4.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -250,8 +265,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -278,7 +293,7 @@
 						<div class="creator__content seller">
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -292,7 +307,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -306,7 +321,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -320,7 +335,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -334,7 +349,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -348,7 +363,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -362,7 +377,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -381,7 +396,7 @@
 		</main>
 
 	</div>
-	<script src="../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
