--- a/src/withdraw.html
+++ b/src/withdraw.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -37,7 +37,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -51,7 +51,7 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../../img/kiss.svg" alt="like">
+									<img src="img/kiss.svg" alt="like">
 									<div class="balance__amount">
 										1,5M
 									</div>
@@ -59,7 +59,7 @@
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -84,16 +84,20 @@
 
 			<div class="change">
 				<div class="change__body">
+					<div class="change__exit">
+						<img src="img/exit-icon.svg" alt="exit">
+					</div>
 					<div class="change__core">
-						<div class="change__exit">
-							<img src="../../img/exit-icon.svg" alt="exit">
-						</div>
 						<div class="change__title">
-							Place a bid
+							Withdraw
+						</div>
+
+						<div class="change__back">
+							<img src="img/back-icon.svg" alt="back">
 						</div>
 						<div class="change__content">
 							<div class="change__content-title">
-								Min.sum
+								You will get
 							</div>
 							<div class="change__content-values create-values">
 								<div class="create-values__taste">
@@ -104,13 +108,19 @@
 										TASTE
 									</span>
 								</div>
+								<div class="create-values__like">
+									<img src="img/lot-sold-icon.svg" alt="like">
+									<span>
+										1,5M
+									</span>
+								</div>
 								<div class="create-values__additional">
 									(1308.54$)
 								</div>
 							</div>
 							<div class="change__button button">
 								<span class="button-body">
-									Place
+									Confirm
 								</span>
 							</div>
 						</div>
@@ -121,7 +131,7 @@
 		</main>
 
 	</div>
-	<script src="../../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
