--- a/src/connect-wallet.html
+++ b/src/connect-wallet.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -37,7 +37,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -51,15 +51,15 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../../img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
-									</div>
+									<img src="img/kiss.svg" alt="like">
+									<div class="balance__amount money">
+										1,150,000,000,000
+								</div>
 								</div>
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -85,38 +85,62 @@
 			<div class="change">
 				<div class="change__body">
 					<div class="change__exit">
-						<img src="../../img/exit-icon.svg" alt="exit">
+						<img src="img/exit-icon.svg" alt="exit">
 					</div>
 					<div class="change__core">
 						<div class="change__title">
-							Swap to TASTE
-						</div>
-
-						<div class="change__back">
-							<img src="../../img/back-icon.svg" alt="back">
+							Connecting wallet
 						</div>
 						<div class="change__content">
-							<div class="change__content-title">
-								You will get
-							</div>
-							<div class="change__content-values create-values">
-								<div class="create-values__taste">
-									<span class="create-values__taste-digit">
-										10000000
-									</span>
-									<span class="create-values__taste-name">
-										TASTE
-									</span>
+							<div class="connect-wallet">
+								<div class="connect-wallet__item">
+									<div class="connect-wallet__item-video">
+										<div class="connect-wallet__number">
+											1.
+										</div>
+										<div class="connect-wallet__play">
+											<img src="img/play-icon.svg" alt="play">
+										</div>
+										<img src="img/connect-video.png" alt="video">
+									</div>
+									<div class="connect-wallet__text">
+										Описание что нужно сделать
+									</div>
 								</div>
-								<div class="create-values__additional">
-									(1308.54$)
+								<div class="connect-wallet__item">
+									<div class="connect-wallet__item-video">
+										<div class="connect-wallet__number">
+											2.
+										</div>
+										<div class="connect-wallet__play">
+											<img src="img/play-icon.svg" alt="play">
+										</div>
+										<img src="img/connect-video.png" alt="video">
+									</div>
+									<div class="connect-wallet__text">
+										Описание что нужно сделать
+									</div>
+								</div>
+								<div class="connect-wallet__item">
+									<div class="connect-wallet__item-video">
+										<div class="connect-wallet__number">
+											3.
+										</div>
+										<div class="connect-wallet__play">
+											<img src="img/play-icon.svg" alt="play">
+										</div>
+										<img src="img/connect-video.png" alt="video">
+									</div>
+									<div class="connect-wallet__text">
+										Описание что нужно сделать
+									</div>
 								</div>
 							</div>
-							<div class="change__button button">
-								<span class="button-body">
-									Swap
-								</span>
-							</div>
+						</div>
+						<div class="change__button button">
+							<span class="button-body">
+								Connect wallet
+							</span>
 						</div>
 					</div>
 				</div>
@@ -125,7 +149,7 @@
 		</main>
 
 	</div>
-	<script src="../../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
