--- a/src/creator.html
+++ b/src/creator.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -41,7 +41,7 @@
 				<div class="profile__header">
 					<div class="profile__header-person person">
 						<div class="person__image">
-							<img src="../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="person__info">
 							<a href="myprofile.html" class="person__info-title">
@@ -81,13 +81,13 @@
 						</div>
 						<div class="action__option option">
 							<div class="option__item">
-								<img src="../img/external-link.svg" alt="link">
+								<img src="img/external-link.svg" alt="link">
 							</div>
 							<div class="option__item">
-								<img src="../img/share.svg" alt="share">
+								<img src="img/share.svg" alt="share">
 							</div>
 							<div class="option__item">
-								<img src="../img/threepoint.svg" alt="menu">
+								<img src="img/threepoint.svg" alt="menu">
 							</div>
 						</div>
 					</div>
@@ -96,19 +96,19 @@
 				<div class="profile__body">
 					<div class="profile__socio socio">
 						<div class="socio__item">
-							<img src="../img/twitch.svg" alt="twitch">
+							<img src="img/twitch.svg" alt="twitch">
 							<span>Twitch</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/instagram.svg" alt="Instagram">
+							<img src="img/instagram.svg" alt="Instagram">
 							<span>Instagram</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/twitter.svg" alt="Twitter">
+							<img src="img/twitter.svg" alt="Twitter">
 							<span>Twitter</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/onlyfans.svg" alt="Onlyfans">
+							<img src="img/onlyfans.svg" alt="Onlyfans">
 							<span>Onlyfans</span>
 						</div>
 					</div>
@@ -139,7 +139,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -152,7 +152,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-1.jpg" alt="lot">
+									<img src="img/lot-img-1.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -163,8 +163,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -181,7 +181,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -194,7 +194,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-2.jpg" alt="lot">
+									<img src="img/lot-img-2.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -205,8 +205,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -223,7 +223,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -236,7 +236,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-3.jpg" alt="lot">
+									<img src="img/lot-img-3.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -247,8 +247,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -265,7 +265,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -278,7 +278,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-4.jpg" alt="lot">
+									<img src="img/lot-img-4.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -289,8 +289,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -307,7 +307,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -320,7 +320,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-5.jpg" alt="lot">
+									<img src="img/lot-img-5.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -331,8 +331,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -349,7 +349,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -362,7 +362,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-6.jpg" alt="lot">
+									<img src="img/lot-img-6.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -373,8 +373,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -391,7 +391,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -404,7 +404,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-7.jpg" alt="lot">
+									<img src="img/lot-img-7.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -415,8 +415,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -433,7 +433,7 @@
 						<div class="lot-item__content">
 							<div class="lot-item__profile">
 								<div class="lot-item__profile-image">
-									<img src="../img/img-lot-profile.svg" alt="profile">
+									<img src="img/img-lot-profile.svg" alt="profile">
 								</div>
 								<div class="lot-item__profile-info">
 									<h5>
@@ -446,7 +446,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-8.jpg" alt="lot">
+									<img src="img/lot-img-8.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -457,8 +457,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -477,7 +477,7 @@
 		</main>
 
 	</div>
-	<script src="../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
