--- a/src/main-page.html
+++ b/src/main-page.html
@@ -5,8 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" /> -->
-	<link rel="stylesheet" href="../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -22,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -41,7 +40,7 @@
 					<div class="user-info">
 						<div class="user-info__header">
 							<div class="user-info__ava">
-								<img src="../img/avatar.png" alt="avatar">
+								<img src="img/avatar.png" alt="avatar">
 							</div>
 							<div class="user-info__personal">
 								<div class="user-info__personal-name">
@@ -73,9 +72,9 @@
 									Sold for:
 								</div>
 								<div class="user-info__sold-content">
-									<img src="../img/kiss.svg" alt="sold">
-									<span>
-										1,5M
+									<img src="img/kiss.svg" alt="sold">
+									<span class="money">
+										1,150,000,000,000
 									</span>
 								</div>
 							</div>
@@ -86,13 +85,13 @@
 									</span>
 								</div>
 								<div class="user-info__action-item">
-									<img src="../img/external-link.svg" alt="link">
+									<img src="img/external-link.svg" alt="link">
 								</div>
 								<div class="user-info__action-item">
-									<img src="../img/share.svg" alt="share">
+									<img src="img/share.svg" alt="share">
 								</div>
 								<div class="user-info__action-item">
-									<img src="../img/threepoint.svg" alt="menu">
+									<img src="img/threepoint.svg" alt="menu">
 								</div>
 							</div>
 						</div>
@@ -101,19 +100,19 @@
 					<div class="main-slider swiper-container">
 						<div class="main-slider__body swiper-wrapper">
 							<div class="main-slider__item swiper-slide">
-								<img src="../img/slider-img-1.jpg" alt="slide">
+								<img src="img/slider-img-1.jpg" alt="slide">
 							</div>
 							<div class="main-slider__item swiper-slide">
-								<img src="../img/slider-img-2.jpg" alt="slide">
+								<img src="img/slider-img-2.jpg" alt="slide">
 							</div>
 							<div class="main-slider__item swiper-slide">
-								<img src="../img/slider-img-3.jpg" alt="slide">
+								<img src="img/slider-img-3.jpg" alt="slide">
 							</div>
 							<div class="main-slider__item swiper-slide">
-								<img src="../img/slider-img-4.jpg" alt="slide">
+								<img src="img/slider-img-4.jpg" alt="slide">
 							</div>
 							<div class="main-slider__item swiper-slide">
-								<img src="../img/slider-img-1.jpg" alt="slide">
+								<img src="img/slider-img-1.jpg" alt="slide">
 							</div>
 						</div>
 						<div class="main-slider__dots swiper-pagination"></div>
@@ -129,7 +128,7 @@
 								<span>
 									Recently added
 								</span>
-								<img src="../img/dropdown.svg" alt="">
+								<img src="img/dropdown.svg" alt="">
 							</div>
 							<ul class="lot__header-list lot__header-list_active">
 								<li>
@@ -148,7 +147,7 @@
 								<span>
 									Auctions
 								</span>
-								<img src="../img/dropdown.svg" alt="">
+								<img src="img/dropdown.svg" alt="">
 							</div>
 						</div>
 					</div>
@@ -158,7 +157,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -171,7 +170,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-1.jpg" alt="lot">
+										<img src="img/lot-img-1.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -182,8 +181,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -200,7 +199,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -213,7 +212,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-2.jpg" alt="lot">
+										<img src="img/lot-img-2.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -224,8 +223,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -242,7 +241,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -255,7 +254,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-3.jpg" alt="lot">
+										<img src="img/lot-img-3.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -266,8 +265,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -284,7 +283,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -297,7 +296,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-4.jpg" alt="lot">
+										<img src="img/lot-img-4.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -308,8 +307,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -326,7 +325,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -339,7 +338,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-5.jpg" alt="lot">
+										<img src="img/lot-img-5.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -350,8 +349,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -368,7 +367,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -381,7 +380,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-6.jpg" alt="lot">
+										<img src="img/lot-img-6.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -392,8 +391,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -410,7 +409,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -423,7 +422,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-7.jpg" alt="lot">
+										<img src="img/lot-img-7.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -434,8 +433,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -452,7 +451,7 @@
 							<div class="lot-item__content">
 								<div class="lot-item__profile">
 									<div class="lot-item__profile-image">
-										<img src="../img/img-lot-profile.svg" alt="profile">
+										<img src="img/img-lot-profile.svg" alt="profile">
 									</div>
 									<div class="lot-item__profile-info">
 										<h5>
@@ -465,7 +464,7 @@
 								</div>
 								<div class="lot-item__image">
 									<a href="item.html">
-										<img src="../img/lot-img-8.jpg" alt="lot">
+										<img src="img/lot-img-8.jpg" alt="lot">
 									</a>
 								</div>
 								<h3 class="lot-item__title">
@@ -476,8 +475,8 @@
 										Sold for:
 									</div>
 									<div class="lot-item__sold-token">
-										<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-										<span>1,5M</span>
+										<img src="img/lot-sold-icon.svg" alt="lot-icon">
+										<span class="money">1,150,000,000,000</span>
 									</div>
 								</div>
 								<div class="lot-item__sold">
@@ -504,7 +503,7 @@
 						<div class="creator__content seller">
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -518,7 +517,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -532,7 +531,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<a href="creator.html" class="seller__title">
 									User Name
@@ -546,7 +545,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -560,7 +559,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -574,7 +573,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -588,7 +587,7 @@
 							</div>
 							<div class="seller__item">
 								<div class="seller__image">
-									<img src="../img/seller-img.png" alt="seller">
+									<img src="img/seller-img.png" alt="seller">
 								</div>
 								<h5 class="seller__title">
 									User Name
@@ -606,8 +605,8 @@
 			</section>
 		</main>
 	</div>
-	<!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
-	<script src="../js/index.js"></script>
+
+	<script src="js/index.js"></script>
 </body>
 
 </html>
