--- a/src/myprofile.html
+++ b/src/myprofile.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="../scss/index.scss">
+	<link rel="stylesheet" href="scss/index.scss">
 	<title>NFT</title>
 </head>
 
@@ -21,10 +21,10 @@
 		<header class="header">
 			<div class="header__body">
 				<div class="header__logo">
-					<img src="../img/logo.svg" alt="logo">
+					<img src="img/logo.svg" alt="logo">
 				</div>
 				<div class="header__search">
-					<img src="../img/search.svg" alt="search">
+					<img src="img/search.svg" alt="search">
 					<input autocomplete="off" type="search" placeholder="Search for ...">
 				</div>
 				<div class="header__connect button">
@@ -35,7 +35,7 @@
 				<div class="header__lk lk">
 					<div class="lk__person">
 						<div class="lk__person-image">
-							<img src="../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="lk__person-content">
 							<a class="lk__person-title">
@@ -49,15 +49,15 @@
 									<div class="balance__title">
 										Balance:
 									</div>
-									<img src="../img/kiss.svg" alt="like">
-									<div class="balance__amount">
-										1,5M
+									<img src="img/kiss.svg" alt="like">
+									<div class="balance__amount money">
+										1,150,000,000,000
 									</div>
 								</div>
 							</div>
 						</div>
 						<div class="lk__dropdown">
-							<img src="../img/lk-dropdown-icon.svg" alt="dropdown">
+							<img src="img/lk-dropdown-icon.svg" alt="dropdown">
 						</div>
 					</div>
 					<div class="lk__menu lk-menu lk-menu_active">
@@ -84,7 +84,7 @@
 				<div class="profile__header">
 					<div class="profile__header-person person">
 						<div class="person__image">
-							<img src="../img/avatar.png" alt="avatar">
+							<img src="img/avatar.png" alt="avatar">
 						</div>
 						<div class="person__info">
 							<a href="myprofile.html" class="person__info-title">
@@ -124,13 +124,13 @@
 						</div>
 						<div class="action__option option">
 							<div class="option__item">
-								<img src="../img/external-link.svg" alt="link">
+								<img src="img/external-link.svg" alt="link">
 							</div>
 							<div class="option__item">
-								<img src="../img/share.svg" alt="share">
+								<img src="img/share.svg" alt="share">
 							</div>
 							<div class="option__item">
-								<img src="../img/threepoint.svg" alt="menu">
+								<img src="img/threepoint.svg" alt="menu">
 							</div>
 						</div>
 					</div>
@@ -139,19 +139,19 @@
 				<div class="profile__body">
 					<div class="profile__socio socio">
 						<div class="socio__item">
-							<img src="../img/twitch.svg" alt="twitch">
+							<img src="img/twitch.svg" alt="twitch">
 							<span>Twitch</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/instagram.svg" alt="Instagram">
+							<img src="img/instagram.svg" alt="Instagram">
 							<span>Instagram</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/twitter.svg" alt="Twitter">
+							<img src="img/twitter.svg" alt="Twitter">
 							<span>Twitter</span>
 						</div>
 						<div class="socio__item">
-							<img src="../img/onlyfans.svg" alt="Onlyfans">
+							<img src="img/onlyfans.svg" alt="Onlyfans">
 							<span>Onlyfans</span>
 						</div>
 					</div>
@@ -169,8 +169,7 @@
 
 			<section class="lot">
 				<div class="lot__titles">
-					<!-- ACTIVE OR WHAT? -->
-					<div class="lot__title">
+					<div class="lot__title lot__title_active">
 						Created
 					</div>
 					<div class="lot__title">
@@ -197,7 +196,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-1.jpg" alt="lot">
+									<img src="img/lot-img-1.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -208,8 +207,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -235,15 +234,15 @@
 										<span></span>
 									</div>
 									<div class="lot-item__point">
-										<a href="popup/change.html">
-											<img src="../img/time-icon.svg" alt="points">
+										<a href="change.html">
+											<img src="img/time-icon.svg" alt="points">
 										</a>
 									</div>
 								</div>
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-2.jpg" alt="lot">
+									<img src="img/lot-img-2.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -254,8 +253,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -281,19 +280,19 @@
 										<span></span>
 									</div>
 									<div class="lot-item__point">
-										<img src="../img/time-icon.svg" alt="points">
+										<img src="img/time-icon.svg" alt="points">
 									</div>
 									<div class="lot-item__point">
-										<img src="../img/correct-icon.svg" alt="points">
+										<img src="img/correct-icon.svg" alt="points">
 									</div>
 									<div class="lot-item__point">
-										<img src="../img/trash-icon.svg" alt="points">
+										<img src="img/trash-icon.svg" alt="points">
 									</div>
 								</div>
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-3.jpg" alt="lot">
+									<img src="img/lot-img-3.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -304,8 +303,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -334,7 +333,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-4.jpg" alt="lot">
+									<img src="img/lot-img-4.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -345,8 +344,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -375,7 +374,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-5.jpg" alt="lot">
+									<img src="img/lot-img-5.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -386,50 +385,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
-								</div>
-							</div>
-							<div class="lot-item__sold">
-								<div class="lot-item__sold-text">
-									Ending in:
-								</div>
-								<div class="lot-item__sold-token">
-									<span>05h 02m 41s</span>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="lot__body-item lot-item">
-						<div class="lot-item__content">
-							<div class="lot-item__widget">
-								<div class="lot-item__status">
-									<div class="lot-item__status_approved">
-										Approved
-									</div>
-								</div>
-								<div class="lot-item__points">
-									<div class="lot-item__point">
-										<span></span>
-									</div>
-
-								</div>
-							</div>
-							<div class="lot-item__image">
-								<a href="item.html">
-									<img src="../img/lot-img-6.jpg" alt="lot">
-								</a>
-							</div>
-							<h3 class="lot-item__title">
-								WFH - art name
-							</h3>
-							<div class="lot-item__sold">
-								<div class="lot-item__sold-text">
-									Sold for:
-								</div>
-								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -459,7 +416,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-7.jpg" alt="lot">
+									<img src="img/lot-img-6.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -470,8 +427,50 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
+								</div>
+							</div>
+							<div class="lot-item__sold">
+								<div class="lot-item__sold-text">
+									Ending in:
+								</div>
+								<div class="lot-item__sold-token">
+									<span>05h 02m 41s</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="lot__body-item lot-item">
+						<div class="lot-item__content">
+							<div class="lot-item__widget">
+								<div class="lot-item__status">
+									<div class="lot-item__status_approved">
+										Approved
+									</div>
+								</div>
+								<div class="lot-item__points">
+									<div class="lot-item__point">
+										<span></span>
+									</div>
+
+								</div>
+							</div>
+							<div class="lot-item__image">
+								<a href="item.html">
+									<img src="img/lot-img-7.jpg" alt="lot">
+								</a>
+							</div>
+							<h3 class="lot-item__title">
+								WFH - art name
+							</h3>
+							<div class="lot-item__sold">
+								<div class="lot-item__sold-text">
+									Sold for:
+								</div>
+								<div class="lot-item__sold-token">
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -500,7 +499,7 @@
 							</div>
 							<div class="lot-item__image">
 								<a href="item.html">
-									<img src="../img/lot-img-8.jpg" alt="lot">
+									<img src="img/lot-img-8.jpg" alt="lot">
 								</a>
 							</div>
 							<h3 class="lot-item__title">
@@ -511,8 +510,8 @@
 									Sold for:
 								</div>
 								<div class="lot-item__sold-token">
-									<img src="../img/lot-sold-icon.svg" alt="lot-icon">
-									<span>1,5M</span>
+									<img src="img/lot-sold-icon.svg" alt="lot-icon">
+									<span class="money">1,150,000,000,000</span>
 								</div>
 							</div>
 							<div class="lot-item__sold">
@@ -531,7 +530,7 @@
 		</main>
 
 	</div>
-	<script src="../js/index.js"></script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
